wotlk/dbadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    wow: dbadmin-wotlk
  name: dbadmin-wotlk
  namespace: wow
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      wow: dbadmin-wotlk
  template:
    metadata:
      labels:
        wow: dbadmin-wotlk
    spec:
      containers:
      - env:
        - name: PMA_HOST
          value: db-wotlk
        - name: MYSQL_ROOT_PASSWORD
          value: 123sqwert!
        image: phpmyadmin/phpmyadmin
        name: cmangos-wotlk-phpadmin
        ports:
        - containerPort: 80
      restartPolicy: Always
