wotlk/server-deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    wow: server-wotlk 
  name: server-wotlk 
  namespace: wow
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      wow: server-wotlk 
  template:
    metadata:
      labels:
        wow: server-wotlk 
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: 123sqwert!
        - name: WOW_SERVER_NAME
          value: wow-wotlk .k8s.tdlab.ca
        - name: MYSQL_HOST
          value: db-wotlk 
        image: chz8494/cmangos-wotlk:latest
        name: cmangos-wotlk-server
        ports:
        - containerPort: 8085
        - containerPort: 3724
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - mysqladmin ping -p${MYSQL_ROOT_PASSWORD} -h${MYSQL_HOST}
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /home/mangos/run/etc/
          name: server-wotlk 
      restartPolicy: Always
      volumes:
      - name: server-wotlk
        persistentVolumeClaim:
          claimName: wow-server-wotlk
