wotlk/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: wow-wotlk.k8s.tdlab.ca
  labels:
    wow: server-wotlk
  name: wow-server-wotlk
  namespace: wow
spec:
  ports:
  - name: "8085"
    port: 8085
    targetPort: 8085
  - name: "3724"
    port: 3724
    targetPort: 3724
  selector:
    wow: server-wotlk
  externalTrafficPolicy: Local
  type: LoadBalancer
